fixed css for form submit buttons and profile label spacing

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,15 +1,20 @@
 h1 {
     font-size: 2rem;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem 1rem 0;
 }
 
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: "Encode Sans"
+}
+form>p {
+    text-align: center;
+    font-size: 1.2rem;
+    margin-top: 1rem;
 }
 
 label{
