--- a/client/src/components/UserDetail/UserDetail.css
+++ b/client/src/components/UserDetail/UserDetail.css
@@ -1,6 +1,7 @@
 .email-row {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: "Encode Sans";
+    margin: 1rem .5rem;
 }
 
 .big-div {
